--- a/plugins/plugin-k8s/web/css/main.css
+++ b/plugins/plugin-k8s/web/css/main.css
@@ -2,10 +2,8 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    transition: all 150ms ease-in-out;
-    font-size: 1em;		
-    padding: 0 1.5em 1.5em;
-    overflow: auto;
+    font-size: 1em;
+    font-family: var(--font-sans-serif);
 }
 
 /* project description */
@@ -44,14 +42,17 @@
     margin: 0;
     padding: 0;
     overflow: auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .project-config-container .project-config-items {
     list-style-type: none;
     border: 1px solid var(--color-ui-04);
-    padding: 1.5em;
+    padding: 1.5em 1.5em 0;
     display: flex;
     margin: 1.5em 0 0;
+    margin-right: 1.5em;
     background: var(--color-ui-01);
     box-shadow: 0 1px 2px 0 rgba(0,0,0,0.10);
     transition: border 300ms ease-in-out, background 300ms ease-in-out;
@@ -218,14 +219,21 @@
     min-width: 20rem;
 }
 
+.bx--form-item input:focus {
+    outline-color: var(--color-base0C);
+}
+
 /* copied from the carbon components styling */
 .bx--form-item {
     flex: 1;
     margin-right: 1rem;
     margin-bottom: 1.5rem;
 }
-.bx--form-item:last-child {
+.bx--form-item ~ .bx--form-item:last-child {
     margin-bottom: 0;
+}
+.bx--form-item:last-child {
+    margin-right: 0;
 }
 .project-config-items .bx--label {
     text-transform: capitalize;
