--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -503,8 +503,10 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
     padding: 0 0.375em;
     border-top: 1px solid var(--color-ui-04);
     transition: all 300ms ease-in-out;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-.entity .entity-kind {
+.entity .entity-kind > span {
     min-width: 7em;
 }
 .repl.sidecar-visible .entity .entity-kind {
