fix(packages/app): sidecar and repl UI glitch fixes
improve consistency of sidecar UI
Fixes #1027

avoid repl flowing off left
Fixes #1028

--- a/packages/app/web/css/left-tab-stripe.css
+++ b/packages/app/web/css/left-tab-stripe.css
@@ -30,6 +30,7 @@ body.subwindow:not(.sidecar-is-minimized) .left-tab-stripe {
     min-width: 0;
     padding: 1.5em 0 0.5em;
     background: var(--color-stripe-01);
+    border-right: 1px solid var(--color-ui-03);
     display: flex;
     flex-direction: column;
     -webkit-app-region: drag;
@@ -198,6 +199,10 @@ body.subwindow .repl .horizontal-landing-zone {
 }
 .repl-input, .repl-output {
     padding: 0 1em 0 1.8125em;
+    transition: padding 300ms ease-in-out;
+}
+.repl.sidecar-visible .repl-input, .repl.sidecar-visible .repl-output {
+    padding-left: 1em;
 }
 
 #help-button.left-tab-stripe-button {
