fix: improve ls output with sidecar open
LAST MODIFIED column should take up less width
Fixes #1030

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -1309,7 +1309,7 @@ code.fancy-code, code.fancy-code.hljs {
     width: 16em;
 }
 .min-width-date-like {
-    min-width: 15em !important;
+    width: 15em;
     display: block;
     overflow: hidden;
     text-overflow: ellipsis;
